--- a/package.json
+++ b/package.json
@@ -1,52 +1,38 @@
 {
-  "name": "vue-crud",
+  "name": "svelte-app",
   "version": "1.0.0",
-  "description": "Vue crud that create and display offers",
   "scripts": {
-    "test": "karma start karma.conf.js",
-    "build": "webpack"
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public"
   },
-  "keywords": [
-    "vue"
-  ],
-  "author": "Marcelo Tokarnia (marcelo.tokarnia@gmail.com)",
-  "license": "ISC",
-  "dependencies": {},
   "devDependencies": {
-    "avoriaz": "^6.3.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "bluebird": "^3.5.1",
-    "bootstrap": "^4.0.0-beta.3",
-    "chai": "^4.1.2",
-    "css-loader": "^0.28.8",
-    "file-loader": "^1.1.6",
-    "font-awesome": "^4.7.0",
-    "font-awesome-webpack": "0.0.5-beta.2",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "jquery": "^3.2.1",
-    "karma": "^2.0.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-mocha": "^1.3.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.9",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "mocha": "^4.1.0",
-    "popper.js": "^1.12.9",
-    "ramda": "^0.25.0",
-    "sass": "^1.0.0-beta.4",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.1",
-    "url-loader": "^0.6.2",
-    "vue": "^2.5.13",
-    "vue-loader": "^13.7.0",
-    "vue-router": "^3.0.1",
-    "vue-template-compiler": "^2.5.13",
-    "vuex": "^3.0.1",
-    "webpack": "^3.10.0"
+    "@rollup/plugin-commonjs": "^11.0.0",
+    "@rollup/plugin-image": "^2.0.4",
+    "@rollup/plugin-inject": "^4.0.1",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-svelte3": "^2.7.3",
+    "jquery": "^3.5.0",
+    "prettier": "^2.0.4",
+    "prettier-plugin-svelte": "^0.7.0",
+    "ramda": "^0.27.0",
+    "rollup": "^1.20.0",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-postcss": "^2.6.4",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^5.1.2",
+    "svelte": "^3.0.0",
+    "tachyons": "^4.11.1"
+  },
+  "dependencies": {
+    "sirv-cli": "^0.4.4"
   }
 }
