--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-image": "^2.0.4",
-    "@rollup/plugin-inject": "^4.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
@@ -26,6 +25,7 @@
     "prettier-plugin-svelte": "^0.7.0",
     "ramda": "^0.27.0",
     "rollup": "^1.20.0",
+    "rollup-plugin-analyzer": "^3.2.3",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-postcss": "^2.6.4",
     "rollup-plugin-svelte": "^5.0.3",
